--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,33 +6,33 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  border: 8px solid white;
-  margin: 16px auto;
+  border: 10px solid white;
+  margin: 25px auto;
 }
 
 .title {
   background: #e3f4ff;
   font-size: 20px;
-  padding: 8px;
+  padding: 10px;
   font-weight: 700;
 }
 
 .content {
   background: #e3f4ff;
-  padding: 20px 8px;
+  padding: 10px 10px;
   margin-bottom: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
-  padding: 8px;
+  padding: 10px;
   text-align: center;
 }
 
 button {
   background: white;
-  border: 1px solid #eee;
-  padding: 8px 8px;
+  border: 5px solid #eee;
+  padding: 10px 8px;
   display: block;
-  margin: 0 auto;
+  margin: auto;
 }
